@@ -16,16 +16,19 @@
 
 package de.gematik.idp.authentication;
 
+import static de.gematik.idp.IdpConstants.EREZEPT;
+import static de.gematik.idp.field.ClaimName.FAMILY_NAME;
+import static de.gematik.idp.field.ClaimName.GIVEN_NAME;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.jose4j.jws.AlgorithmIdentifiers.RSA_USING_SHA256;
 
 import de.gematik.idp.crypto.model.PkiIdentity;
+import de.gematik.idp.data.ScopeConfiguration;
 import de.gematik.idp.data.UserConsentConfiguration;
 import de.gematik.idp.data.UserConsentDescriptionTexts;
 import de.gematik.idp.exceptions.ChallengeSignatureInvalidException;
 import de.gematik.idp.field.ClaimName;
-import de.gematik.idp.field.IdpScope;
 import de.gematik.idp.tests.PkiKeyResolver;
 import de.gematik.idp.token.JsonWebToken;
 import java.security.Security;
@@ -60,6 +63,14 @@ class AuthenticationChallengeVerifierTest {
   private PkiIdentity serverIdentity;
   private Map<String, Map<String, String>> userConsentConfiguration;
 
+  ScopeConfiguration openidConfig = ScopeConfiguration.builder().description("openid desc").build();
+  ScopeConfiguration pairingConfig =
+      ScopeConfiguration.builder()
+          .audienceUrl("erplala")
+          .description("erp desc")
+          .claimsToBeIncluded(List.of(GIVEN_NAME, FAMILY_NAME))
+          .build();
+
   @BeforeEach
   public void init(
       @PkiKeyResolver.Filename("1_C.SGD-HSM.AUT_oid_sgd1_hsm_ecc.p12")
@@ -71,32 +82,19 @@ class AuthenticationChallengeVerifierTest {
     this.clientIdentity = clientIdentity;
     this.serverIdentity = serverIdentity;
     this.rsaClientIdentity = rsaClientIdentity;
+
     authenticationChallengeBuilder =
         AuthenticationChallengeBuilder.builder()
             .serverSigner(new IdpJwtProcessor(serverIdentity))
             .userConsentConfiguration(
                 UserConsentConfiguration.builder()
-                    .claimsToBeIncluded(
-                        Map.of(
-                            IdpScope.OPENID,
-                            List.of(),
-                            IdpScope.EREZEPT,
-                            List.of(),
-                            IdpScope.PAIRING,
-                            List.of()))
                     .descriptionTexts(
                         UserConsentDescriptionTexts.builder()
-                            .claims(Collections.emptyMap())
-                            .scopes(
-                                Map.of(
-                                    IdpScope.OPENID,
-                                    "openid",
-                                    IdpScope.PAIRING,
-                                    "pairing",
-                                    IdpScope.EREZEPT,
-                                    "erezept"))
+                            .claims(
+                                Map.of(GIVEN_NAME, "da given name", FAMILY_NAME, "da family name"))
                             .build())
                     .build())
+            .scopesConfiguration(Map.of("openid", openidConfig, "pairing", pairingConfig))
             .build();
     authenticationResponseBuilder = AuthenticationResponseBuilder.builder().build();
     authenticationChallengeVerifier =
@@ -151,27 +149,12 @@ class AuthenticationChallengeVerifierTest {
             .serverSigner(new IdpJwtProcessor(otherServerIdentity))
             .userConsentConfiguration(
                 UserConsentConfiguration.builder()
-                    .claimsToBeIncluded(
-                        Map.of(
-                            IdpScope.OPENID,
-                            List.of(),
-                            IdpScope.EREZEPT,
-                            List.of(),
-                            IdpScope.PAIRING,
-                            List.of()))
                     .descriptionTexts(
                         UserConsentDescriptionTexts.builder()
                             .claims(Collections.emptyMap())
-                            .scopes(
-                                Map.of(
-                                    IdpScope.OPENID,
-                                    "openid",
-                                    IdpScope.PAIRING,
-                                    "pairing",
-                                    IdpScope.EREZEPT,
-                                    "erezept"))
                             .build())
                     .build())
+            .scopesConfiguration(Map.of("openid", openidConfig, "pairing", pairingConfig))
             .build();
     authenticationChallenge =
         authenticationChallengeBuilder.buildAuthenticationChallenge(
@@ -212,7 +195,7 @@ class AuthenticationChallengeVerifierTest {
   void checkSignatureNjwt_challengeOutdated() {
     authenticationChallenge =
         authenticationChallengeBuilder.buildAuthenticationChallenge(
-            "goo", "foo", "bar", "schmar", IdpScope.EREZEPT.getJwtValue(), "nonceValue");
+            "goo", "foo", "bar", "schmar", EREZEPT, "nonceValue");
     final JsonWebToken jsonWebToken = authenticationChallenge.getChallenge();
     final IdpJwtProcessor reSignerProcessor = new IdpJwtProcessor(serverIdentity);
     final JwtBuilder jwtDescription = jsonWebToken.toJwtDescription();
